# HEPHAESTUS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  GETTING_STARTED.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  release-please-config.json
backend/: .env.example  pyproject.toml  start-backend.sh
backend/app/: config.py  main.py
backend/app/api/: ws.py
backend/app/core/: agent_jobs.py  broadcaster.py  conversations.py  decisions.py  decompose.py  deps.py  diff_tests.py  driver.py  event_cost.py  event_parser.py  event_summarizer.py  event_text.py  events.py  git.py  goals.py  helpers.py  iters.py  merge_job.py  merge_resolver.py  migrate.py  pagination.py  process.py  queue.py  rate_limit.py  run_summary.py  scan.py  scan_run.py  scope_guard.py  state.py  task_graph.py  transient.py  validators.py  verify.py  workspaces.py  worktrees.py  ws_shim.py
backend/app/models/: connections.py  domain.py  merge.py  requests.py  validation.py  workspace.py
backend/app/orchestrator/: fsm.py  git_ops.py  main.py  prompt_builder.py  revision_snapshot.py
backend/app/services/: agent_activity.py  cli_detect.py  codebase_map.py  connection_test.py  connections.py  doc_reader.py  github_issues.py  hephaestus_home.py  ideas.py  insights.py  lessons.py  notify.py  opencode_runner.py  profiler.py  project_memory.py  prompt_manager.py  verify_detect.py  ws_manager.py
backend/tests/: conftest.py
backend/tests/contract/: test_agent_jobs_api.py  test_clis_api.py  test_connections_api.py  test_conversation_api.py  test_conversations_api.py  test_costs_api.py  test_driver_controls.py  test_driver_ralph.py  test_driver_runs.py  test_echo_api.py  test_existing_state.py  test_fs_browse.py  test_goals_api.py  test_goals_input_validation.py  test_health_api.py  test_ideas_api.py  test_insights_api.py  test_integrations_api.py  test_lock_contract.py  (+16 more)
(+366 files in other folders)
